# AI-Terminal-Debug-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_debug.py
src/: __init__.py
src/ai/: llm_client.py
src/api/: server.py
src/cli/: main.py
src/core/: config.py  debugger.py  history.py
src/parsers/: error_parser.py
src/retrieval/: knowledge_base.py
tests/: test_api.py  test_parser.py
