[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "debugai"
version = "1.0.0"
description = "AI Terminal Debug Assistant — explains errors and suggests fixes instantly"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ai", "debugging", "cli", "terminal", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.29"]
retrieval = ["chromadb>=0.5"]
all = ["openai>=1.30", "anthropic>=0.29", "chromadb>=0.5"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
debugai = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-terminal-debug-assistant"
Repository = "https://github.com/yourusername/ai-terminal-debug-assistant"
Issues = "https://github.com/yourusername/ai-terminal-debug-assistant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
